force-app/force-app/force-app/main/default/objects/Tour_Plan__c/Tour_Plan__c.object-meta.xml
<CustomObject>
    <label>Tour Plan</label>
    <nameField>
        <displayFormat>TP-{00000}</displayFormat>
        <label>Tour Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tour Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>