force-app/force-app/force-app/main/default/objects/Tour_Plan__c/fields/Batta__c.field-meta.xml
<CustomField>
    <fullName>Batta__c</fullName>
    <label>Batta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>