force-app/force-app/force-app/main/default/objects/Tour_Plan__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Billing_District__c</field>
            <operation>equals</operation>
            <valueField>$Source.District__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tour Plans</relationshipLabel>
    <relationshipName>Tour_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>