force-app/force-app/force-app/main/default/objects/Tour_Plan__c/fields/End_Of_The_Month__c.field-meta.xml
<CustomField>
    <fullName>End_Of_The_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End Of The Month</label>
    <type>Checkbox</type>
</CustomField>