force-app/force-app/force-app/main/default/objects/Tour_Plan__c/fields/Key_Agenda__c.field-meta.xml
<CustomField>
    <fullName>Key_Agenda__c</fullName>
    <label>Key Agenda</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>