force-app/force-app/force-app/main/default/objects/Tour_Plan__c/fields/Temp__c.field-meta.xml
<CustomField>
    <fullName>Temp__c</fullName>
    <label>Temp</label>
    <length>100</length>
    <type>Text</type>
</CustomField>