force-app/force-app/force-app/main/default/objects/Tour_Plan__c/fields/Total_Exp_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Exp_Budget__c</fullName>
    <label>Total Exp Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>