force-app/force-app/force-app/main/default/objects/Tour_Plan__c/fields/Total_Expected_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Expected_Budget__c</fullName>
    <formula>Travel_Fare__c  +   Batta__c  +  Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Expected Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>