force-app/force-app/force-app/main/default/objects/Tour_Plan__c/fields/Total_Month_Expense__c.field-meta.xml
<CustomField>
    <fullName>Total_Month_Expense__c</fullName>
    <label>Total Month Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>