force-app/force-app/force-app/main/default/objects/Tour_Plan__c/fields/Tour_Plan_Year__c.field-meta.xml
<CustomField>
    <fullName>Tour_Plan_Year__c</fullName>
    <formula>text(Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <type>Text</type>
</CustomField>