force-app/force-app/force-app/main/default/objects/Tour_Plan__c/fields/Travel_Fare__c.field-meta.xml
<CustomField>
    <fullName>Travel_Fare__c</fullName>
    <label>Travel Fare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>