force-app/force-app/force-app/main/default/objects/Tour_Plan__c/fields/Visit_Days__c.field-meta.xml
<CustomField>
    <fullName>Visit_Days__c</fullName>
    <label>Visit Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>