force-app/force-app/force-app/main/default/objects/Tour_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Executive__c</columns>
    <columns>Travel_Mode__c</columns>
    <columns>Travel_Fare__c</columns>
    <columns>Customer__c</columns>
    <columns>Total_Expected_Budget__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>