force-app/force-app/force-app/main/default/objects/Tour_Plan__c/listViews/My_Tour_Plans.listView-meta.xml
<ListView>
    <fullName>My_Tour_Plans</fullName>
    <columns>NAME</columns>
    <columns>Month__c</columns>
    <columns>Customer__c</columns>
    <columns>Total_Expected_Budget__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Tour Plans</label>
</ListView>